@@ -5,6 +5,8 @@ documents those changes that are of interest to users and admins.
 ========================
  -- Set DEFAULT flag in partition structure when slurmctld reads the
     configuration file. Patch from Rémi Palancher.
+ -- Fix for possible deadlock in accounting logic: Avoid calling
+    jobacct_gather_g_getinfo() until there is data to read from the socket.
 
 * Changes in SLURM 2.3.3
 ========================
